# nmc

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_COMPLETE_SUMMARY.md  README.md  VCLUSTER_IMPLEMENTATION_STATUS.md  deploy.sh
.github/wiki/: Home.md
.github/workflows/: build-and-release.yml  ci.yml  init-wiki.yml
ansible/: README.md  deploy.yml  recruited-node.yml
ansible/templates/: nmc-server.service.j2  nmc-update.conf.j2  nmc-update.service.j2  nmc-update.sh.j2  nmc-update.timer.j2  nmc.env.j2  tracey-continuum-local.json.j2  tracey-sidecar.service.j2
docs/: ARCHITECTURE.md  COMPLIANCE.md  SECURITY.md  TESTING.md  WORKFLOWS.md
nmc_client/: CMakeLists.txt
nmc_client/src/: main.cpp
nmc_client/src/CLI/: CLIParser.cpp  CLIParser.h  Command.cpp  Command.h  GlobalFlags.h
nmc_client/src/Commands/: AarnnCommands.cpp  AarnnCommands.h  BaseCommand.h  BucketCommands.cpp  BucketCommands.h  ConnectionCommands.cpp  ConnectionCommands.h  GailCommands.cpp  GailCommands.h  K8sCommands.cpp  K8sCommands.h  ModelCommands.cpp  ModelCommands.h  NodeCommands.cpp  NodeCommands.h  OpenShiftCommands.cpp  OpenShiftCommands.h  OpenStackCommands.cpp  OpenStackCommands.h  ProxmoxCommands.cpp  ProxmoxCommands.h  RefinerCommands.cpp  RefinerCommands.h  RootCommand.cpp  RootCommand.h  SSHCommands.cpp  SSHCommands.h  ServerCommands.cpp  ServerCommands.h  TraceyCommands.cpp  TraceyCommands.h  VClusterCommands.cpp  VClusterCommands.h  VMCommands.cpp  VMCommands.h  VersionCommand.cpp  VersionCommand.h
nmc_client/src/Core/: CloudAPIClient.cpp  CloudAPIClient.h  GailClient.cpp  GailClient.h  Utils.cpp  Utils.h  VersionCheck.cpp  VersionCheck.h
nmc_client/src/Models/: Bucket.h  CloudResponse.h  Connection.h  K8sCluster.h  SSHKey.h  VM.h
nmc_server/: CMakeLists.txt
nmc_server/build_fresh/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
nmc_server/build_fresh/docs/: bucket.html  index.html  login.html  model.html  openshift.html  ssh.html
nmc_server/build_fresh/libyaml_project-prefix/src/libyaml_project-stamp/: libyaml_project-gitinfo.txt  libyaml_project-update-info.txt
nmc_server/build_fresh/libyaml_project-prefix/tmp/: libyaml_project-cfgcmd.txt  libyaml_project-gitclone.cmake  libyaml_project-gitupdate.cmake  libyaml_project-mkdirs.cmake
nmc_server/src/: main.cpp
nmc_server/src/Core/: APIRoutes.cpp  APIRoutes.h  APIRoutes_AiLab.cpp  APIRoutes_ControlSurface.cpp  APIRoutes_DocsAuth.cpp  APIRoutes_DomainCrud.cpp  APIRoutes_DomainProxy.cpp  APIRoutes_ExtractedCommon.inl  APIRoutes_InternalHelpers.inl  APIRoutes_ReleaseOperate.cpp  APIRoutes_ReleaseOperateExecution.cpp  APIRoutes_Tracey.cpp  APIRoutes_TraceyAdaptiveAssessment.cpp  APIRoutes_TraceyRuntime.cpp  ConnectionHandlers.cpp  ConnectionHandlers.h  K8sHandlers.cpp  K8sHandlers.h  K8sHandlers_VCluster_Advanced.cpp  K8sHandlers_VCluster_Lifecycle.cpp  K8sHandlers_VCluster_Monitoring.cpp  OIDCValidator.cpp  OIDCValidator.h  OpenShiftClient.cpp  OpenShiftClient.h  OpenStackClient.cpp  OpenStackClient.h  ProxmoxClient.cpp  ProxmoxClient.h  ServerStateStore.cpp  ServerStateStore.h  TraceyCVEIntel.cpp  TraceyCVEIntel.h  TraceyStateStore.cpp  TraceyStateStore.h  Utils.cpp  Utils.h  VersionCheck.cpp  VersionCheck.h
nmc_server/src/Models/: Bucket.h  CloudResponse.h  Connection.h  K8sCluster.h  SSHKey.h  VClusterConfig.h  VM.h
nmc_server/src/docs/: auth.js  dashboard.css  dashboard.js  index.html  k8s.html  login.html  node.html  openshift.html  openstack.html  proxmox.html  service-access.js  ssh.html  style.css  tracey.html  vcluster.html  vm.html
scripts/: aarnn_nmc_proof.sh  derive-version.sh  install-client.sh  install-common.sh  install-server.sh  package-release.ps1  package-release.sh  preflight.sh  tracey_network_ga_search.sh
src/CLI/: CLIParser.cpp  CLIParser.h
src/Commands/: BaseCommand.cpp  BaseCommand.h  BucketCommands.h  RootCommand.h  SSHCommands.h  VersionCommand.cpp
src/Core/: CloudAPIClient.cpp  CloudAPIClient.h  Utils.cpp  Utils.h
src/Models/: CloudResponse.h
tests/contracts/: api_route_contract_test.py  command_coverage_contract_test.py  node_recruit_capacity_contract_test.py  server_route_sources.py  server_safety_contract_test.py  tracey_adaptive_contract_test.py  tracey_cli_simulation_contract_test.py  tracey_network_simulation_contract_test.py
tests/functional/: client_cli_integration_test.py  server_authz_integration_test.py
